<resources>
    <string name="app_name">ChatAppZalo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification_name">Sử dụng tên thật giúp bạn bè dễ dàng nhận ra bạn.</string>
    <string name="notification_phone">Nhập số điện thoại của bạn để tạo tài khoản mới.</string>
    <string name="notification_login">Vui lòng nhập số điện thoại và mật khẩu để đăng nhập.</string>
    <string name="notification_otp">Zalo đã gửi 1 mã xác nhận vào số điện thoại bạn đăng kí.</string>
    <string name="createAcc">Nhấp vào hình đại diện bên trên cho phép bạn đổi ảnh đại diện.</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="new_feed">New Feed</string>
    <string name="settings">Settings</string>
    <string name="zalo">Zalo</string>
    <string name="search">Search</string>
    <string name="qr_code">QR Code</string>
    <string name="add">Add</string>
    <string name="add_friends">Add Friends</string>
    <string name="create_group">Create Group</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="time">Time</string>
    <string name="sample_name">Sample Name</string>
    <string name="msgHint">Hãy nhập gì đó ...</string>
    <string name="call">Tạo cuộc gọi</string>
    <string name="message">Message</string>
    <string name="name">name</string>
    <string name="online">online</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="notificationPassword">Vui lòng nhập mật khẩu của bạn</string>
    <string name="userprofile">Trang cá nhân</string>
    <string name="added">Added</string>
    <string name="logout">Đăng xuất</string>
    <string name="phone">Số điện thoại:</string>
    <string name="samplePhone">+84792122906</string>
    <string name="pass">Mật khẩu:</string>
    <string name="editpassword">password</string>
    <string name="save">Save</string>
</resources>