<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/qrcode"
        android:icon="@drawable/qr_code"
        android:title="@string/qr_code"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add"
        android:icon="@drawable/add"
        android:title="@string/add"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/addfriend"
                android:icon="@drawable/addfriend"
                android:title="@string/add_friends"
                app:showAsAction="never" />
            <item
                android:id="@+id/creategroup"
                android:icon="@drawable/creategroup"
                android:title="@string/create_group"
                app:showAsAction="never" />
            <item
                android:id="@+id/userprofile"
                android:icon="@drawable/userprofile"
                android:title="@string/userprofile"
                app:showAsAction="never" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>